--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -95,7 +95,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   <ItemGroup>
     <ClCompile Include="DKJEN\Base\DxCommon.cpp" />
     <ClCompile Include="DKJEN\Base\Log.cpp" />
-    <ClCompile Include="DKJEN\Base\PipelineState.cpp" />
+    <ClCompile Include="DKJEN\Base\PolygonPSO.cpp" />
+    <ClCompile Include="DKJEN\Base\TexturePSO.cpp" />
     <ClCompile Include="DKJEN\Base\WinApp.cpp" />
     <ClCompile Include="DKJEN\Base\RoadTexture.cpp" />
     <ClCompile Include="DKJEN\externals\imgui\imgui.cpp" />
@@ -107,7 +108,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="DKJEN\externals\imgui\imgui_widgets.cpp" />
     <ClCompile Include="DKJEN\Imgui\imguiManager.cpp" />
     <ClCompile Include="DKJEN\Math\Math.cpp" />
-    <ClCompile Include="DKJEN\Shader\CompileShader.cpp" />
+    <ClCompile Include="DKJEN\Shader\PolygonCompileShader.cpp" />
+    <ClCompile Include="DKJEN\Shader\TextureCompileShader.cpp" />
     <ClCompile Include="DKJEN\Type\Camera.cpp" />
     <ClCompile Include="DKJEN\Type\Polygon.cpp" />
     <ClCompile Include="DKJEN\Type\Sprite.cpp" />
@@ -120,13 +122,21 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <Text Include="DKJEN\externals\imgui\LICENSE.txt" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="Obiject3d.VS.hlsl">
+    <FxCompile Include="PolygonObiject3d.VS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="PolygonOdject3d.PS.hlsl">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="TextureObiject3d.VS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
-    <FxCompile Include="Odject3d.PS.hlsl">
+    <FxCompile Include="TextureOdject3d.PS.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -136,7 +146,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   <ItemGroup>
     <ClInclude Include="DKJEN\Base\DxCommon.h" />
     <ClInclude Include="DKJEN\Base\Log.h" />
-    <ClInclude Include="DKJEN\Base\PipelineState.h" />
+    <ClInclude Include="DKJEN\Base\PolygonPSO.h" />
+    <ClInclude Include="DKJEN\Base\TexturePSO.h" />
     <ClInclude Include="DKJEN\Base\WinApp.h" />
     <ClInclude Include="DKJEN\Base\RoadTexture.h" />
     <ClInclude Include="DKJEN\externals\imgui\imconfig.h" />
@@ -149,7 +160,8 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="DKJEN\externals\imgui\imstb_truetype.h" />
     <ClInclude Include="DKJEN\Imgui\imguiManager.h" />
     <ClInclude Include="DKJEN\Math\Math.h" />
-    <ClInclude Include="DKJEN\Shader\CompileShader.h" />
+    <ClInclude Include="DKJEN\Shader\PolygonCompileShader.h" />
+    <ClInclude Include="DKJEN\Shader\TextureCompileShader.h" />
     <ClInclude Include="DKJEN\Type\Camera.h" />
     <ClInclude Include="DKJEN\Type\Polygon.h" />
     <ClInclude Include="DKJEN\Type\Sprite.h" />
