--- a/imgui.ini
+++ b/imgui.ini
@@ -13,3 +13,23 @@ Pos=918,341
 Size=282,219
 Collapsed=0
 
+[Window][Texture1]
+Pos=770,321
+Size=413,183
+Collapsed=0
+
+[Window][Texture2]
+Pos=44,274
+Size=382,294
+Collapsed=0
+
+[Window][polygon1]
+Pos=60,60
+Size=279,157
+Collapsed=0
+
+[Window][polygon2]
+Pos=526,57
+Size=295,140
+Collapsed=0
+
