--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=282,219
 Collapsed=0
 
 [Window][Texture1]
-Pos=770,321
+Pos=653,325
 Size=413,183
 Collapsed=0
 
@@ -29,7 +29,17 @@ Size=279,157
 Collapsed=0
 
 [Window][polygon2]
-Pos=526,57
+Pos=839,83
 Size=295,140
+Collapsed=0
+
+[Window][St]
+Pos=126,98
+Size=287,165
+Collapsed=0
+
+[Window][SphereCamera]
+Pos=41,423
+Size=354,128
 Collapsed=0
 
