--- a/DirectＸ.vcxproj.filters
+++ b/DirectＸ.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="DKJEN\Type\Sphere.cpp">
       <Filter>DKJEN\Type</Filter>
     </ClCompile>
+    <ClCompile Include="DKJEN\Base\Function.cpp">
+      <Filter>DKJEN\Base\Dx</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include=".editorconfig">
@@ -236,6 +239,9 @@
     </ClInclude>
     <ClInclude Include="DKJEN\Type\Sphere.h">
       <Filter>DKJEN\Type</Filter>
+    </ClInclude>
+    <ClInclude Include="DKJEN\Base\Function.h">
+      <Filter>DKJEN\Base\Dx</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
