--- a/imgui.ini
+++ b/imgui.ini
@@ -14,17 +14,17 @@ Size=282,219
 Collapsed=0
 
 [Window][Texture1]
-Pos=653,325
+Pos=1038,310
 Size=413,183
 Collapsed=0
 
 [Window][Texture2]
-Pos=44,272
+Pos=-35,391
 Size=382,294
 Collapsed=0
 
 [Window][polygon1]
-Pos=60,60
+Pos=904,554
 Size=279,157
 Collapsed=0
 
@@ -39,7 +39,12 @@ Size=287,165
 Collapsed=0
 
 [Window][SphereCamera]
-Pos=41,423
+Pos=847,364
 Size=354,128
+Collapsed=0
+
+[Window][sphere]
+Pos=60,60
+Size=279,147
 Collapsed=0
 
