画像種別読込

--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -101,7 +101,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="DKJEN\Base\SpritePSO.cpp" />
     <ClCompile Include="DKJEN\Base\TexturePSO.cpp" />
     <ClCompile Include="DKJEN\Base\WinApp.cpp" />
-    <ClCompile Include="DKJEN\Base\RoadTexture.cpp" />
+    <ClCompile Include="DKJEN\Base\ImageLoading.cpp" />
     <ClCompile Include="DKJEN\externals\imgui\imgui.cpp" />
     <ClCompile Include="DKJEN\externals\imgui\imgui_demo.cpp" />
     <ClCompile Include="DKJEN\externals\imgui\imgui_draw.cpp" />
@@ -181,7 +181,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="DKJEN\Base\SpritePSO.h" />
     <ClInclude Include="DKJEN\Base\TexturePSO.h" />
     <ClInclude Include="DKJEN\Base\WinApp.h" />
-    <ClInclude Include="DKJEN\Base\RoadTexture.h" />
+    <ClInclude Include="DKJEN\Base\ImageLoading.h" />
     <ClInclude Include="DKJEN\externals\imgui\imconfig.h" />
     <ClInclude Include="DKJEN\externals\imgui\imgui.h" />
     <ClInclude Include="DKJEN\externals\imgui\imgui_impl_dx12.h" />
