--- a/imgui.ini
+++ b/imgui.ini
@@ -49,7 +49,12 @@ Size=283,152
 Collapsed=1
 
 [Window][Sprite]
-Pos=357,349
-Size=374,134
+Pos=498,510
+Size=374,185
+Collapsed=0
+
+[Window][sprite]
+Pos=60,60
+Size=428,206
 Collapsed=0
 
