--- a/DirectＸ.vcxproj
+++ b/DirectＸ.vcxproj
@@ -97,6 +97,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="DKJEN\Base\Function.cpp" />
     <ClCompile Include="DKJEN\Base\LightPSO.cpp" />
     <ClCompile Include="DKJEN\Base\Log.cpp" />
+    <ClCompile Include="DKJEN\Base\ObjLoad.cpp" />
     <ClCompile Include="DKJEN\Base\PolygonPSO.cpp" />
     <ClCompile Include="DKJEN\Base\SpritePSO.cpp" />
     <ClCompile Include="DKJEN\Base\TexturePSO.cpp" />
@@ -115,6 +116,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="DKJEN\Shader\PolygonCompileShader.cpp" />
     <ClCompile Include="DKJEN\Shader\SpriteCompileShader.cpp" />
     <ClCompile Include="DKJEN\Shader\TextureCompileShader.cpp" />
+    <ClCompile Include="DKJEN\Type\Obj3D.cpp" />
     <ClCompile Include="DKJEN\Type\Camera.cpp" />
     <ClCompile Include="DKJEN\Type\Polygon.cpp" />
     <ClCompile Include="DKJEN\Type\Sphere.cpp" />
@@ -177,6 +179,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="DKJEN\Base\Function.h" />
     <ClInclude Include="DKJEN\Base\LightPSO.h" />
     <ClInclude Include="DKJEN\Base\Log.h" />
+    <ClInclude Include="DKJEN\Base\ObjLoad.h" />
     <ClInclude Include="DKJEN\Base\PolygonPSO.h" />
     <ClInclude Include="DKJEN\Base\SpritePSO.h" />
     <ClInclude Include="DKJEN\Base\TexturePSO.h" />
@@ -196,6 +199,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="DKJEN\Shader\PolygonCompileShader.h" />
     <ClInclude Include="DKJEN\Shader\SpriteCompileShader.h" />
     <ClInclude Include="DKJEN\Shader\TextureCompileShader.h" />
+    <ClInclude Include="DKJEN\Type\Obj3D.h" />
     <ClInclude Include="DKJEN\Type\Camera.h" />
     <ClInclude Include="DKJEN\Type\Polygon.h" />
     <ClInclude Include="DKJEN\Type\Sphere.h" />
