--- a/imgui.ini
+++ b/imgui.ini
@@ -44,7 +44,7 @@ Size=354,128
 Collapsed=0
 
 [Window][sphere]
-Pos=162,534
+Pos=236,475
 Size=443,158
 Collapsed=0
 
@@ -56,5 +56,10 @@ Collapsed=0
 [Window][sprite]
 Pos=60,60
 Size=428,206
+Collapsed=0
+
+[Window][3D]
+Pos=60,60
+Size=343,174
 Collapsed=0
 
